NextGenAppPackage/main/default/objects/Contact/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>if(AND(ISPICKVAL(Status__c, &apos;Approved&apos;), start_date__c &lt;= TODAY(),  end_date__c &gt;= TODAY()),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>