NextGenAppPackage/main/default/objects/Contact/fields/Active_contact__c.field-meta.xml
<CustomField>
    <fullName>Active_contact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active contact</label>
    <type>Checkbox</type>
</CustomField>