NextGenAppPackage/main/default/objects/Contact/fields/CoLA__c.field-meta.xml
<CustomField>
    <fullName>CoLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CoLA</label>
    <referenceTo>CoLA__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>