NextGenAppPackage/main/default/objects/Contact/fields/end_date__c.field-meta.xml
<CustomField>
    <fullName>end_date__c</fullName>
    <defaultValue>today()+30</defaultValue>
    <label>end date</label>
    <type>Date</type>
</CustomField>