NextGenAppPackage/main/default/objects/Contact/fields/start_date__c.field-meta.xml
<CustomField>
    <fullName>start_date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>start date</label>
    <type>Date</type>
</CustomField>