NextGenAppPackage/main/default/objects/Contact/validationRules/Contact_must_be_in_Account_ZIP_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
    <active>false</active>
    <errorConditionFormula>and (

   NOT( isblank(Account.Id) ),
 Account.ShippingPostalCode &lt;&gt; MailingPostalCode  )</errorConditionFormula>
    <errorMessage>El contacto debe de tener una cuenta asociada</errorMessage>
</ValidationRule>