NextGenAppPackage/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>CONTACT.ADDRESS2_ZIP</columns>
    <columns>FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>